--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "*"
 
 [packages]
 google-api-python-client = "*"
+oauth2client = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
